--- a/yoga/index.html
+++ b/yoga/index.html
@@ -21,7 +21,7 @@
 	</nav>
 	<div class="container">
 	  <div class="jumbotron">
-	  	<div class="page-header">
+	  	<div class="page-header text-center">
 		    <h1>Titulo</h1> 
 		</div>
 		<p>Parrafo</p> 
@@ -65,6 +65,8 @@
 		    	<span class="sr-only">Next</span>
 		  </a>
 		</div>
+	</div>
+	<div class="container">
 		<div class="video">
 			<iframe width="560" height="315" src="https://www.youtube.com/embed/UYS_eeRjZjI?list=PLdJEi_5ae6FLcNDNP0be9laP1Uns79aEt" frameborder="0" allowfullscreen></iframe>
 		</div>
