--- a/yoga/index.html
+++ b/yoga/index.html
@@ -1,82 +1,89 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 <head>
+	<title>Nombre Pagina</title>
 	<meta charset="utf-8">
 	<link href="stylesheets/styles.css" rel="stylesheet" type="text/css" />
+	<link href="http://fonts.googleapis.com/css?family=Nunito" rel="stylesheet" type="text/css">
 
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
   		<div class="container-fluid">
     		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">WebSiteName</a>
+      			<a class="navbar-brand" href="#">Nombre Pagina</a>
     		</div>
     		<ul class="nav navbar-nav">
       			<li class="active"><a href="#">Home</a></li>
-      			<li><a href="#">Page 1</a></li>
-      			<li><a href="#">Page 2</a></li> 
-      			<li><a href="#">Page 3</a></li> 
+      			<li><a href="#">Cursos</a></li>
+						<li><a href="#">Biografia</a></li>
+      			<li><a href="#">Contacto</a></li>
     		</ul>
   		</div>
 	</nav>
-	<div class="container">
+	<div class="container-fluid">
 	  <div class="jumbotron">
-	  	<div class="page-header text-center">
-		    <h1>Titulo</h1> 
+	  	<div class="page-header text-center title-header">
+		    <h1>Yoga</h1>
 		</div>
-		<p>Parrafo</p> 
+		<p>Con la profesora Nombre Apellido</p>
 	  </div>
 	</div>
-  	<div class="container">
+
+	<div class="container-fluid">
 		<div id="myCarousel" class="carousel slide" data-ride="carousel">
 			<!-- Indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-			   	<li data-target="#myCarousel" data-slide-to="1"></li>
-			    <li data-target="#myCarousel" data-slide-to="2"></li>
-			    <li data-target="#myCarousel" data-slide-to="3"></li>
+		   	<li data-target="#myCarousel" data-slide-to="1"></li>
+		    <li data-target="#myCarousel" data-slide-to="2"></li>
+		    <li data-target="#myCarousel" data-slide-to="3"></li>
 			</ol>
 			<!-- Wrapper for slides -->
-		    <div class="carousel-inner" role="listbox">
-		      <div class="item active">
-		        <img src="img/1.png" class="img-rounded" alt="Image" width="460" height="600">
-		      </div>
+		  <div class="carousel-inner carousel-size" role="listbox">
+		    <div class="item active">
+		    	<img src="img/1.png" class="img-rounded center-block" alt="Image">
+		  	</div>
 
-		      <div class="item">
-		        <img src="img/2.png" class="img-rounded" alt="Image" width="460" height="600">
-		      </div>
-		    
-		      <div class="item">
-		        <img src="img/3.png" class="img-rounded" alt="Image" width="460" height="600">
-		      </div>
-
-		      <div class="item">
-		        <img src="img/4.jpg" class="img-rounded" alt="Image" width="460" height="600">
-		      </div>
+		    <div class="item">
+		      <img src="img/2.png" class="img-rounded center-block" alt="Image">
 		    </div>
 
-		  	<!-- Left and right controls -->
-		  	<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-		    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-		    	<span class="sr-only">Previous</span>
-		  	</a>
-		  	<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-		    	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-		    	<span class="sr-only">Next</span>
-		  </a>
+		    <div class="item">
+		      <img src="img/3.png" class="img-rounded center-block" alt="Image">
+		    </div>
+
+		    <div class="item">
+		      <img src="img/4.jpg" class="img-rounded center-block" alt="Image">
+		    </div>
+			</div>
+
+			<!-- Left and right controls -->
+			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+		  	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+		  	<span class="sr-only">Previous</span>
+			</a>
+			<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+		  	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+		  	<span class="sr-only">Next</span>
+			</a>
 		</div>
 	</div>
-	<div class="container">
-		<div class="video">
-			<iframe width="560" height="315" src="https://www.youtube.com/embed/UYS_eeRjZjI?list=PLdJEi_5ae6FLcNDNP0be9laP1Uns79aEt" frameborder="0" allowfullscreen></iframe>
+
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-lg-12">
+				<span class="main-text">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</span>
+				<img src="img/1.png" class="img-responsive main-img" alt="Image">
+			</div>
 		</div>
 	</div>
+
 
 
 	<script type="text/javascript" src="javascripts/jquery-1.12.4.js"></script>
 	<script type="text/javascript" src="javascripts/bootstrap.js"></script>
 	<script type="text/javascript" src="javascripts/script.js"></script>
-	
+
 </body>
 </html>
-
