--- a/yoga/index.html
+++ b/yoga/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+	<nav class="navbar navbar-fixed-top">
   		<div class="container-fluid">
     		<div class="navbar-header">
       			<a class="navbar-brand" href="#">Nombre Pagina</a>
@@ -21,10 +21,12 @@
     		</ul>
   		</div>
 	</nav>
+
+
 	<div class="container-fluid">
 	  <div class="jumbotron">
 	  	<div class="page-header text-center title-header">
-		    <h1>Yoga</h1>
+		    <h1>Título</h1>
 		</div>
 		<p>Con la profesora Nombre Apellido</p>
 	  </div>
@@ -71,10 +73,23 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="row">
+		<div class="row main-row">
 			<div class="col-lg-12">
-				<span class="main-text">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</span>
-				<img src="img/1.png" class="img-responsive main-img" alt="Image">
+				<span class="col-lg-6 col-md-6">
+					<p class="main-text left">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
+				</span>
+				<span class="col-lg-6 col-md-6">
+					<img src="img/1.png" class="img-responsive main-img" alt="Image">
+				</span>
+			</div>
+			<div class="col-lg-12 text-separator"></div>
+			<div class="col-lg-12">
+				<span class="col-lg-6 col-md-6">
+					<img src="img/1.png" class="img-responsive main-img left" alt="Image">
+				</span>
+				<span class="col-lg-6 col-md-6">
+					<p class="main-text right">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
+				</span>
 			</div>
 		</div>
 	</div>
