--- a/yoga/index.html
+++ b/yoga/index.html
@@ -8,18 +8,31 @@
 
 </head>
 <body>
-	<nav class="navbar navbar-fixed-top">
-  		<div class="container-fluid">
-    		<div class="navbar-header">
-      			<a class="navbar-brand" href="#">Nombre Pagina</a>
-    		</div>
-    		<ul class="nav navbar-nav">
-      			<li class="active"><a href="#">Home</a></li>
-      			<li><a href="#">Cursos</a></li>
-						<li><a href="#">Biografia</a></li>
-      			<li><a href="#">Contacto</a></li>
-    		</ul>
-  		</div>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+	  <!-- El logotipo y el icono que despliega el menú se agrupan
+	       para mostrarlos mejor en los dispositivos móviles -->
+	  <div class="navbar-header">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse"
+	            data-target=".navbar-ex1-collapse">
+	      <span class="sr-only">Desplegar navegación</span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Nombre Pagina</a>
+	  </div>
+
+	  <!-- Agrupar los enlaces de navegación, los formularios y cualquier
+	       otro elemento que se pueda ocultar al minimizar la barra -->
+	  <div class="collapse navbar-collapse navbar-ex1-collapse">
+	    <ul class="nav navbar-nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#">Cursos</a></li>
+				<li><a href="#">Biografia</a></li>
+				<li><a href="#">Contacto</a></li>
+	    </ul>
+
+	  </div>
 	</nav>
 
 
