--- a/yoga/index.html
+++ b/yoga/index.html
@@ -35,7 +35,6 @@
 	  </div>
 	</nav>
 
-
 	<div class="container-fluid">
 	  <div class="jumbotron">
 	  	<div class="page-header text-center title-header">
@@ -92,7 +91,7 @@
 					<p class="main-text left">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
 				</span>
 				<span class="col-lg-6 col-md-6">
-					<img src="img/1.png" class="img-responsive main-img" alt="Image">
+					<img src="img/1.png" class="img-responsive main-img right" alt="Image">
 				</span>
 			</div>
 			<div class="col-lg-12 text-separator"></div>
@@ -107,7 +106,9 @@
 		</div>
 	</div>
 
-
+	<div class="col-lg-12 video">
+		<iframe width="560" height="315" align="middle" src="https://www.youtube.com/embed/cK6P_51gcMw" frameborder=	"0" allowfullscreen></iframe>
+	</div>
 
 	<script type="text/javascript" src="javascripts/jquery-1.12.4.js"></script>
 	<script type="text/javascript" src="javascripts/bootstrap.js"></script>
