--- a/yoga/index.html
+++ b/yoga/index.html
@@ -40,7 +40,8 @@
 	  	<div class="page-header text-center title-header">
 		    <h1>Título</h1>
 		</div>
-		<p>Con la profesora Nombre Apellido</p>
+		<span class="teacher"><p>Con la profesora Nombre Apellido</p></span>
+		<span class="social-media-icon"><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></span>
 	  </div>
 	</div>
 
