--- a/yoga/index.html
+++ b/yoga/index.html
@@ -19,15 +19,15 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="#">Nombre Pagina</a>
+	    <a class="navbar-brand" href="index.html">Nombre Pagina</a>
 	  </div>
 
 	  <!-- Agrupar los enlaces de navegación, los formularios y cualquier
 	       otro elemento que se pueda ocultar al minimizar la barra -->
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav">
-	      <li class="active"><a href="#">Home</a></li>
-	      <li><a href="#">Cursos</a></li>
+	      <li class="active"><a href="index.html">Home</a></li>
+	      <li><a href="cursos.html">Cursos</a></li>
 				<li><a href="#">Biografia</a></li>
 				<li><a href="#">Contacto</a></li>
 	    </ul>
