--- a/yoga/clases.html
+++ b/yoga/clases.html
@@ -27,7 +27,7 @@
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav">
 	      <li class="active"><a href="index.html">Home</a></li>
-	      <li><a href="cursos.html">Cursos</a></li>
+	      <li><a href="clases.html">Clases</a></li>
 				<li><a href="#">Biografia</a></li>
 				<li><a href="#">Contacto</a></li>
 	    </ul>
@@ -41,8 +41,30 @@
 		    <h1>Título</h1>
 		</div>
 		<span class="teacher"><p>Con la profesora Nombre Apellido</p></span>
-		<span class="social-media-icon"><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></span>
+		<span class="social-media-icon"><a href="http://facebook.com/test"><i class="fa fa-facebook"></i></a></span>
 	  </div>
+	</div
+
+	<div class="container-fluid">
+		<div class="row main-row">
+			<div class="col-lg-12">
+				<span class="col-lg-6 col-md-6">
+					<p class="main-text left">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
+				</span>
+				<span class="col-lg-6 col-md-6">
+					<img src="img/1.png" class="img-responsive main-img right" alt="Image">
+				</span>
+			</div>
+			<div class="col-lg-12 text-separator"></div>
+			<div class="col-lg-12">
+				<span class="col-lg-6 col-md-6">
+					<img src="img/1.png" class="img-responsive main-img left" alt="Image">
+				</span>
+				<span class="col-lg-6 col-md-6">
+					<p class="main-text right">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
+				</span>
+			</div>
+		</div>
 	</div>
 
 
