--- a/yoga/index.html
+++ b/yoga/index.html
@@ -27,7 +27,7 @@
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav">
 	      <li class="active"><a href="index.html">Home</a></li>
-	      <li><a href="cursos.html">Cursos</a></li>
+	      <li><a href="cursos.html">Clases</a></li>
 				<li><a href="#">Biografia</a></li>
 				<li><a href="#">Contacto</a></li>
 	    </ul>
