--- a/yoga/index.html
+++ b/yoga/index.html
@@ -27,7 +27,7 @@
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav">
 	      <li class="active"><a href="index.html">Home</a></li>
-	      <li><a href="cursos.html">Clases</a></li>
+	      <li><a href="clases.html">Clases</a></li>
 				<li><a href="#">Biografia</a></li>
 				<li><a href="#">Contacto</a></li>
 	    </ul>
@@ -86,7 +86,7 @@
 	</div>
 
 	<div class="container-fluid">
-		<div class="row main-row">
+		<div class="row main-row border">
 			<div class="col-lg-12">
 				<span class="col-lg-6 col-md-6">
 					<p class="main-text left">Rebum torquatos at mei, enim volumus ei nec, ex minimum verterem his. Cibo habeo dissentias id pro, mei illum explicari ad, vix veri sensibus necessitatibus an. Platonem cotidieque voluptatibus ne eam, copiosae mediocrem quo ex. Mel petentium appellantur interpretaris eu. Per te porro vocibus scribentur. Cum saperet recusabo erroribus no, his natum fuisset indoctum no. Hinc aliquam expetendis te mei.</p>
