--- a/yoga/clases.html
+++ b/yoga/clases.html
@@ -55,7 +55,7 @@
 
 	<div class="row class-row">
 		<span class="col-lg-6 left">
-				<ul>
+				<ul class ="class-schedule">
 					<li>asd</li>
 				</ul>
 		</span>
