--- a/yoga/clases.html
+++ b/yoga/clases.html
@@ -43,25 +43,26 @@
 		<span class="teacher"><p>Con la profesora Nombre Apellido</p></span>
 		<span class="social-media-icon"><a href="http://facebook.com/"><i class="fa fa-facebook"></i></a></span>
 	  </div>
-	</div
-
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-12">
-  			<img src="img/calendar.png" class="img-rounded center-block calendar" alt="Image">
-			</div>
-		</div>
 	</div>
 
+
 	<div class="row class-row">
-		<span class="col-lg-6 left">
-				<ul class ="class-schedule">
-					<li>asd</li>
-				</ul>
-		</span>
-		<span class="col-lg-6 right">
-					<div id="googleMap" style="width:500px;height:380px;"></div>
-		</span>
+			<span class="col-lg-6 left">
+					<ul class ="class-schedule">
+						<li>Click aca y en el mapa se ubica en el marker</li>
+					</ul>
+			</span>
+			<span class="col-lg-6 right">
+				<img src="img/calendar.png" class="img-rounded center-block calendar" alt="Image">
+			</span>
+
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-lg-12">
+							<div id="googleMap" style="width:500px;height:380px;"></div>
+				</div>
+			</div>
+		</div>
 	</div>
 
 
